syntax = "proto3";

option csharp_namespace = "LiveService.Protos";

package livestream;

service Livestream {
  rpc StartPullStream (StartPullStreamRequest) returns (StreamInfoResponse);

  rpc StopPullStream (StopPullStreamRequest) returns (StopPullStreamResponse);

  rpc ListActiveStreams (ListActiveStreamsRequest) returns (ListActiveStreamsResponse);

  rpc GetStreamInfo (GetStreamInfoRequest) returns (StreamInfoResponse);
}

message StartPullStreamRequest {
  string live_id = 1;
  string passphrase = 2;
}

message StreamInfoResponse {
  string live_id = 1;
  string host = 2;
  uint32 port = 3;
  string passphrase = 4;
}

message StopPullStreamRequest {
  string live_id = 1;
}

message StopPullStreamResponse {
  bool is_success = 1;
}

message ListActiveStreamsRequest {
}

message ListActiveStreamsResponse {
  repeated string live_ids = 1;
}

message GetStreamInfoRequest {
  string live_id = 1;
}
